--- a/app/src/main/res/layout-land/movie_page.xml
+++ b/app/src/main/res/layout-land/movie_page.xml
@@ -7,61 +7,14 @@
     android:background="@color/purple"
     tools:context=".MoviePage">
 
-    <ImageButton
-        android:id="@+id/btnStar5"
-        style="@android:style/Widget.Holo.ImageButton"
-        android:layout_width="48dp"
-        android:layout_height="52dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/purple"
-        android:src="@android:drawable/btn_star_big_off"
-        app:layout_constraintStart_toStartOf="@+id/btnStar4"
-        app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle" />
-
-    <ImageButton
-        android:id="@+id/btnStar1"
-        style="@android:style/Widget.Holo.ImageButton"
-        android:layout_width="48dp"
-        android:layout_height="52dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/purple"
-        android:src="@android:drawable/btn_star_big_off"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle" />
-
-    <ImageButton
-        android:id="@+id/btmStar3"
-        style="@android:style/Widget.Holo.ImageButton"
-        android:layout_width="48dp"
-        android:layout_height="52dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/purple"
-        android:src="@android:drawable/btn_star_big_off"
-        app:layout_constraintStart_toStartOf="@+id/btnStar2"
-        app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle" />
-
-    <ImageButton
-        android:id="@+id/btnStar4"
-        style="@android:style/Widget.Holo.ImageButton"
-        android:layout_width="48dp"
-        android:layout_height="52dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/purple"
-        android:src="@android:drawable/btn_star_big_off"
-        app:layout_constraintStart_toStartOf="@+id/btmStar3"
-        app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle" />
-
     <TextView
         android:id="@+id/tvLogo"
         android:layout_width="match_parent"
         android:layout_height="58dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="8dp"
-        android:text="                               Moodvie"
+        android:text="@string/app_name"
+        android:textAlignment="center"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         android:textColor="@color/pinkpurple"
         android:textSize="36sp"
@@ -73,67 +26,60 @@
         android:id="@+id/tvMovieTitle"
         android:layout_width="239dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="Movie Title (201X)"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="132dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/movie_title"
+        android:textAlignment="center"
         android:textColor="@color/light"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivMovePoster" />
+        android:textSize="40sp"
+        app:layout_constraintBottom_toTopOf="@+id/tvSynopsis"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvLogo"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageButton
         android:id="@+id/btnAddMovie"
         style="@android:style/Widget.DeviceDefault.Light.ImageButton"
         android:layout_width="46dp"
         android:layout_height="45dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="144dp"
+        android:layout_marginTop="9dp"
         android:background="@color/purple"
         android:scaleType="fitXY"
         android:src="@android:drawable/ic_input_add"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnStar2" />
+        app:layout_constraintTop_toBottomOf="@+id/movieRatingBar" />
 
     <ImageView
         android:id="@+id/ivMovePoster"
-        android:layout_width="245dp"
-        android:layout_height="176dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="277dp"
+        android:layout_height="219dp"
+        android:layout_marginStart="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvLogo"
         tools:src="@drawable/ic_launcher_background" />
 
     <ImageButton
         android:id="@+id/btnOwnMovie"
-        android:layout_width="30dp"
-        android:layout_height="33dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="46dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:background="@color/purple"
         android:scaleType="fitXY"
         android:src="@android:drawable/checkbox_off_background"
         app:layout_constraintStart_toEndOf="@+id/btnAddMovie"
-        app:layout_constraintTop_toBottomOf="@+id/btnStar2" />
-
-    <ImageButton
-        android:id="@+id/btnStar2"
-        style="@android:style/Widget.Holo.ImageButton"
-        android:layout_width="48dp"
-        android:layout_height="52dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/purple"
-        android:src="@android:drawable/btn_star_big_off"
-        app:layout_constraintStart_toStartOf="@+id/btnStar1"
-        app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/movieRatingBar" />
 
     <TextView
         android:id="@+id/tvSynopsis"
-        android:layout_width="250dp"
-        android:layout_height="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="144dp"
-        android:text="Synopsis:"
+        android:layout_width="84dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="216dp"
+        android:text="@string/synopsis_title"
+        android:textAlignment="center"
         android:textColor="@color/light"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -143,9 +89,10 @@
     <TextView
         android:id="@+id/tvMovieDesc"
         android:layout_width="359dp"
-        android:layout_height="151dp"
-        android:layout_marginEnd="32dp"
-        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam cursus sit amet risus et porttitor. Sed auctor fermentum enim, eget feugiat enim congue sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula aliquam orci non aliquet. Integer mattis nisi sit amet aliquet aliquet. Sed venenatis turpis eu orci molestie mattis. Nulla vel velit sit amet quam pulvinar tempor nec vel sapien. Vestibulum luctus venenatis quam ut ultrices. Curabitur dapibus risus ut massa consequat, sed ultrices eros aliquam."
+        android:layout_height="114dp"
+        android:layout_marginEnd="76dp"
+        android:text="@string/movie_synopsis"
+        android:textAlignment="center"
         android:textColor="@color/light"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvSynopsis" />
@@ -154,21 +101,38 @@
         android:id="@+id/tvStarring"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="320dp"
-        android:text="Starring:"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="216dp"
+        android:text="@string/starring"
+        android:textAlignment="center"
         android:textColor="@color/light"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvMovieDesc" />
 
+    <com.iarcuschin.simpleratingbar.SimpleRatingBar
+        android:id="@+id/movieRatingBar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ivMovePoster"
+        app:srb_borderColor="@color/grey"
+        app:srb_fillColor="@color/golden"
+        app:srb_isIndicator="true"
+        app:srb_numberOfStars="5"
+        app:srb_starSize="40dp"
+        app:srb_stepSize="0.5" />
+
     <TextView
         android:id="@+id/tvCast"
-        android:layout_width="289dp"
-        android:layout_height="56dp"
-        android:layout_marginEnd="100dp"
-        android:text="Some Bloke, Some Other Bloke, A Lady, Token POC, Other Rando Side Actors"
+        android:layout_width="359dp"
+        android:layout_height="114dp"
+        android:layout_marginEnd="76dp"
+        android:text="@string/cast_members"
+        android:textAlignment="center"
         android:textColor="@color/light"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvStarring" />
