--- a/app/src/main/res/layout/movie_page.xml
+++ b/app/src/main/res/layout/movie_page.xml
@@ -11,22 +11,29 @@
         android:id="@+id/tvLogo"
         android:layout_width="match_parent"
         android:layout_height="58dp"
-        android:text="              Moodvie"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:textAlignment="center"
+        android:text="@string/app_name"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         android:textColor="@color/pinkpurple"
         android:textSize="36sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvMovieTitle"
-        android:layout_width="239dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="Movie Title (201X)"
+        android:textAlignment="center"
+        android:layout_width="0dp"
+        android:layout_height="38dp"
+        android:layout_marginStart="116dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="116dp"
+        android:text="@string/movie_title"
         android:textColor="@color/light"
-        android:textSize="24sp"
+        android:textSize="36sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivMovePoster" />
 
@@ -35,52 +42,64 @@
         style="@android:style/Widget.DeviceDefault.Light.ImageButton"
         android:layout_width="46dp"
         android:layout_height="45dp"
+        android:layout_marginStart="152dp"
+        android:layout_marginBottom="16dp"
         android:background="@color/purple"
         android:scaleType="fitXY"
         android:src="@android:drawable/ic_input_add"
-        app:layout_constraintStart_toEndOf="@+id/tvMovieTitle"
-        app:layout_constraintTop_toBottomOf="@+id/ivMovePoster" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/ivMovePoster"
-        android:layout_width="match_parent"
-        android:layout_height="292dp"
+        android:layout_width="277dp"
+        android:layout_height="219dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginEnd="64dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvLogo"
         tools:src="@drawable/ic_launcher_background" />
 
     <ImageButton
         android:id="@+id/btnOwnMovie"
-        android:layout_width="30dp"
-        android:layout_height="33dp"
-        android:layout_marginTop="12dp"
+        android:layout_width="46dp"
+        android:layout_height="45dp"
+        android:layout_marginEnd="156dp"
+        android:layout_marginBottom="16dp"
         android:background="@color/purple"
         android:scaleType="fitXY"
         android:src="@android:drawable/checkbox_off_background"
-        app:layout_constraintStart_toEndOf="@+id/btnAddMovie"
-        app:layout_constraintTop_toBottomOf="@+id/ivMovePoster" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/tvSynopsis"
-        android:layout_width="250dp"
-        android:layout_height="32dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="60dp"
-        android:text="Synopsis:"
+        android:layout_width="81dp"
+        android:textAlignment="center"
+        android:layout_height="22dp"
+        android:layout_marginStart="164dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="164dp"
+        android:text="@string/synopsis_title"
         android:textColor="@color/light"
         android:textSize="18sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/movieRatingBar" />
+        app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle" />
 
     <TextView
         android:id="@+id/tvMovieDesc"
         android:layout_width="359dp"
         android:layout_height="151dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="4dp"
-        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam cursus sit amet risus et porttitor. Sed auctor fermentum enim, eget feugiat enim congue sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula aliquam orci non aliquet. Integer mattis nisi sit amet aliquet aliquet. Sed venenatis turpis eu orci molestie mattis. Nulla vel velit sit amet quam pulvinar tempor nec vel sapien. Vestibulum luctus venenatis quam ut ultrices. Curabitur dapibus risus ut massa consequat, sed ultrices eros aliquam."
+        android:textAlignment="center"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="24dp"
+        android:text="@string/movie_synopsis"
         android:textColor="@color/light"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvSynopsis" />
 
@@ -88,32 +107,50 @@
         android:id="@+id/tvStarring"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="164dp"
         android:layout_marginTop="4dp"
-        android:text="Starring:"
+        android:layout_marginEnd="164dp"
+        android:textAlignment="center"
+        android:text="@string/starring"
         android:textColor="@color/light"
         android:textSize="18sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvMovieDesc" />
 
     <TextView
         android:id="@+id/tvCast"
-        android:layout_width="289dp"
-        android:layout_height="56dp"
-        android:layout_marginBottom="16dp"
-        android:text="Some Bloke, Some Other Bloke, A Lady, Token POC, Other Rando Side Actors"
+        android:layout_width="359dp"
+        android:layout_height="151dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="24dp"
+        android:text="@string/cast_members"
+        android:textAlignment="center"
         android:textColor="@color/light"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/tvStarring" />
-
-    <RatingBar
-        android:id="@+id/movieRatingBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/tvStarring"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <com.iarcuschin.simpleratingbar.SimpleRatingBar
+        android:id="@+id/movieRatingBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="8dp"
+        app:srb_isIndicator="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvCast"
+        app:srb_borderColor="@color/grey"
+        app:srb_fillColor="@color/golden"
+        app:srb_numberOfStars="5"
+        app:srb_starSize="40dp"
+        app:srb_stepSize="0.5" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
