--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="light">#E5D3E8</color>
     <color name="dark">#231E23</color>
     <color name="blue">#33AFFF</color>
+    <color name="grey">#808080</color>
+    <color name="golden">#FFD700</color>
 </resources>
